kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-practice
  namespace: devops-practice
spec:
  type: ClusterIP
  selector:
    app: devops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
