kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-practice
  namespace: devops-practice
spec:
  ingressClassName: nginx
  rules:
  - host: devops-practice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-practice
            port:
              number: 80
